#83061: Avoid usage of deprecated constructors (new Integer(...))